--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1771,7 +1771,7 @@ section.lazy-placeholder:after {
 .cid-rTWXl96hbV {
   padding-top: 60px;
   padding-bottom: 45px;
-  background-color: #efefef;
+  background-color: #ffb907;
 }
 .cid-rTWXl96hbV P {
   color: #767676;
@@ -1825,6 +1825,14 @@ section.lazy-placeholder:after {
 }
 .cid-rTQMYl3ffL H3 {
   text-align: left;
+}
+.cid-rTXEJ9BIYL {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ff7f9f;
+}
+.cid-rTXEJ9BIYL .mbr-section-subtitle {
+  color: #232323;
 }
 .cid-rTX3icdZe7 {
   padding-top: 0px;
@@ -1889,68 +1897,196 @@ section.lazy-placeholder:after {
   transition: 0.2s background ease-in-out;
   background: linear-gradient(to left, #554346, #45505b) !important;
 }
-.cid-rTXlnr8MsY {
+.cid-rTXSpcsqjj {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
-  overflow: hidden;
 }
-.cid-rTXlnr8MsY .mbr-slider .carousel-control {
+.cid-rTXSpcsqjj .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+.cid-rTXSpcsqjj .item {
+  padding-left: 0;
+  padding-right: 0;
+}
+.cid-rTXSpcsqjj .carousel-control,
+.cid-rTXSpcsqjj .close {
   background: #1b1b1b;
 }
-.cid-rTXlnr8MsY .mbr-slider .carousel-control-prev {
+.cid-rTXSpcsqjj .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-rTXSpcsqjj .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-rTXSpcsqjj .close {
+  position: fixed;
+  opacity: .5;
+  font-size: 35px;
+  font-weight: 300;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  line-height: 70px;
+  border: none;
+  text-align: center;
+  text-shadow: none;
+  z-index: 5;
+  -webkit-transition: opacity .3s ease;
+  -moz-transition: opacity .3s ease;
+  -o-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+  font-family: 'MobiriseIcons';
+}
+.cid-rTXSpcsqjj .close::before {
+  content: '\e91a';
+}
+.cid-rTXSpcsqjj .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-rTXSpcsqjj .carousel-control {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  top: 50%;
+  margin-top: -35px;
+  line-height: 70px;
+  border-radius: 50%;
+  font-size: 35px;
+  border: 0;
+  opacity: .5;
+  text-shadow: none;
+  z-index: 5;
+  color: #fff;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+.cid-rTXSpcsqjj .carousel-inner > .active {
+  display: block;
+}
+.cid-rTXSpcsqjj .carousel-control.left {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-rTXlnr8MsY .mbr-slider .carousel-control-next {
+.cid-rTXSpcsqjj .carousel-control.right {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-rTXlnr8MsY .mbr-slider .modal-body .close {
+.cid-rTXSpcsqjj .carousel-control .icon-next,
+.cid-rTXSpcsqjj .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-rTXSpcsqjj .carousel-control:hover {
   background: #1b1b1b;
-}
-.cid-rTXlnr8MsY .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-rTXlnr8MsY .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-rTXlnr8MsY .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-rTXlnr8MsY .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
   color: #fff;
-  z-index: 2;
+  opacity: 1;
 }
-.cid-rTXlnr8MsY .mbr-gallery-title:before {
-  content: " ";
+@media (max-width: 768px) {
+  .cid-rTXSpcsqjj .carousel-control,
+  .cid-rTXSpcsqjj .carousel-indicators,
+  .cid-rTXSpcsqjj .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rTXSpcsqjj .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-rTXSpcsqjj .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-rTXSpcsqjj .carousel-indicators {
+  bottom: 0;
+  margin-bottom: 3px;
+}
+@media (max-width: 991px) {
+  .cid-rTXSpcsqjj .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rTXSpcsqjj .carousel-indicators {
+    display: none;
+  }
+}
+.cid-rTXSpcsqjj .carousel-indicators .active,
+.cid-rTXSpcsqjj .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #1b1b1b;
+  opacity: .5;
+  border: 4px solid #1b1b1b;
+}
+.cid-rTXSpcsqjj .carousel-indicators .active {
+  background: #fff;
+}
+.cid-rTXSpcsqjj .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-rTXSpcsqjj .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-rTXSpcsqjj .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-rTXSpcsqjj .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-rTXSpcsqjj .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-rTXSpcsqjj .modal-body img {
   width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  object-fit: contain;
+  max-height: calc(98.25vh);
+}
+.cid-rTXSpcsqjj .carousel {
+  width: 100%;
+}
+.cid-rTXSpcsqjj .modal-dialog .carousel-inner {
+  height: auto;
+}
+.cid-rTXSpcsqjj .modal-backdrop.in {
+  opacity: .8;
+}
+.cid-rTXSpcsqjj .modal.fade .modal-dialog {
+  -webkit-transition: margin-top 0.3s ease-out;
+  -moz-transition: margin-top 0.3s ease-out;
+  -o-transition: margin-top 0.3s ease-out;
+  transition: margin-top 0.3s ease-out;
+}
+.cid-rTXSpcsqjj .modal.fade .modal-dialog,
+.cid-rTXSpcsqjj .modal.in .modal-dialog {
+  -webkit-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
+  transform: none;
 }
 .cid-rTQNJM2OsI {
   padding-top: 90px;
